--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@ body{
   box-shadow: 0 8px 20px rgba(0,0,0,.4);
 }
 .logo{
-  height:180px; width:auto; filter: drop-shadow(0 12px 28px rgba(0,0,0,.45));
+  height:180px;
+  width:auto;
+  filter: drop-shadow(0 12px 28px rgba(0,0,0,.45));
+  animation: glowPulse 3s infinite ease-in-out;
+}
+@keyframes glowPulse {
+  0%, 100% {
+    filter: drop-shadow(0 12px 28px rgba(0,0,0,.45)) brightness(1);
+  }
+  50% {
+    filter: drop-shadow(0 12px 38px rgba(255,100,100,.6)) brightness(1.3);
+  }
 }
 @media (max-width:480px){ .logo{height:140px;} }
 
@@ -61,11 +72,19 @@ body{
 .icon-btn:hover::before{ background: var(--glass-hover); border-color: rgba(255,255,255,.45); }
 .icon-btn:active::before{ transform: skewX(-14deg) translateY(1px); }
 
-.icon{width:42px; height:42px;}
+.icon{
+  width:42px; height:42px;
+  opacity:.9;
+  filter: sepia(0.2) contrast(1.1);
+  transition: filter .2s ease, opacity .2s ease;
+}
+.icon-btn:hover .icon {
+  opacity:1;
+  filter: sepia(0.3) brightness(1.1);
+}
 
 /* RETRO LOOK */
 .retro-icon svg {
-  filter: sepia(0.25) contrast(1.05) saturate(0.9);
   position: relative;
   z-index: 1;
 }
@@ -100,24 +119,17 @@ body{
         <!-- Instagram -->
         <a class="icon-btn retro-icon" href="https://www.instagram.com/winterpieshop/" target="_blank" rel="noreferrer" aria-label="Instagram">
           <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
-            <defs>
-              <linearGradient id="ig-gradient" x1="0" y1="0" x2="1" y2="1">
-                <stop offset="0%" stop-color="#f58529"/>
-                <stop offset="50%" stop-color="#dd2a7b"/>
-                <stop offset="100%" stop-color="#8134af"/>
-              </linearGradient>
-            </defs>
-            <path fill="url(#ig-gradient)" d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm5 5.8A4.2 4.2 0 1 1 7.8 12 4.2 4.2 0 0 1 12 7.8zm5.2-2.5a1 1 0 1 1-1 1 1 0 0 1 1-1z"/>
+            <path fill="none" stroke="#fff" stroke-width="2" d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5z"/>
+            <circle cx="12" cy="12" r="3.2" stroke="#fff" stroke-width="2" fill="none"/>
+            <circle cx="17.3" cy="6.7" r="0.8" fill="#fff"/>
           </svg>
           <span class="sr-only">Instagram</span>
         </a>
 
         <!-- TikTok -->
         <a class="icon-btn retro-icon" href="https://www.tiktok.com/@winterpieshop" target="_blank" rel="noreferrer" aria-label="TikTok">
-          <svg class="icon" viewBox="0 0 48 48" aria-hidden="true">
-            <path fill="#000" d="M30 4v5a9 9 0 0 0 6 2V17a14 14 0 0 1-8-2.6V33a9 9 0 1 1-9-9c.6 0 1.3.1 2 .2V18a14 14 0 1 0 15 14V4h-6z"/>
-            <path fill="#25F4EE" d="M30 4v5a9 9 0 0 0 6 2V17a14 14 0 0 1-8-2.6V33a9 9 0 1 1-9-9c.6 0 1.3.1 2 .2V18a14 14 0 1 0 15 14V4h-6z" opacity=".5"/>
-            <path fill="#FE2C55" d="M36 11c-2.2 0-4.2-.7-6-2v3a9 9 0 0 0 6 2V11z" opacity=".7"/>
+          <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+            <path fill="#fff" d="M14.5 3v2.7a5.5 5.5 0 0 0 3 1v2.6a7.9 7.9 0 0 1-4-1.3v7.7a3.5 3.5 0 1 1-3.5-3.5c.3 0 .7 0 1 .1V9.2a7.9 7.9 0 1 0 8.5 7.8V3h-5z"/>
           </svg>
           <span class="sr-only">TikTok</span>
         </a>
