--- a/index.html
+++ b/index.html
@@ -26,33 +26,28 @@ body{
   position:absolute; inset:0;
   background: radial-gradient(1200px 600px at 40% 40%, rgba(0,0,0,.1), rgba(0,0,0,.4) 60%, rgba(0,0,0,.6) 100%);
 }
-  /* HEADLINE */
+/* HEADLINE (plain white text, no background) */
 .headline{
   position:absolute;
   top:2rem;
   left:50%;
   transform:translateX(-50%);
-  background:rgba(0,0,0,.45);
-  backdrop-filter: blur(8px);
-  border:1px solid rgba(255,255,255,.25);
-  border-radius:12px;
-  padding:.7rem 1.6rem;
-  font-size:1.1rem;
-  font-weight:500;
-  letter-spacing:.02em;
+  font-size:1.6rem;
+  font-weight:600;
+  letter-spacing:.03em;
   color:#fff;
   text-align:center;
-  box-shadow:0 4px 12px rgba(0,0,0,.4);
+  text-shadow:0 2px 6px rgba(0,0,0,.45);
   z-index:20;
 }
 
 @media (max-width:480px){
   .headline{
-    font-size:.18rem;
-    padding:.5rem 1rem;
-    top:1rem;
+    font-size:1.2rem;
+    top:1.2rem;
   }
 }
+
 
 .center{position:relative; z-index:10; height:100%; display:grid; place-items:center;}
 .stack{display:flex; flex-direction:column; align-items:center; gap:1.5rem;}
